<?xml version="1.0"?>
<package format="2">
  <name>data_logger</name>
  <version>1.0.0</version>
  <description>None</description>
  <maintainer email="ildaralaric@gmail.com">Ildar Babataev</maintainer>
  <author>Ildar Babataev</author>
  <license>Copyright (c) 2022 Evocargo LLC, all rights reserved.</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>message_runtime</build_depend>

  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>libpcl-all-dev</depend>
  <depend>eigen_conversions</depend>
</package>
